plutus-book: fix references to bibliography and glossar
Multiple issues here:
- Needed a fix for inline anchors to not be completely broken in
general. [Upstream
PR](https://github.com/asciidoctor/asciidoctor-epub3/pull/204), I've
patched our version locally (hooray for Nix).
- Dodgy stuff with special sections as top-level sections in the
particular way that the `asciidoctor-epub3` gem does them. Not totally
sure what the fix is. [Upstream
issue](https://github.com/asciidoctor/asciidoctor/issues/3356).
    - Despite the issue not being fixed, understanding it allowed me to
      add a workaround, in the form of putting the bibliography and the
      glossary in a dummy section.

With these changes, references to the bibliography work, and adding
anchors in the glossary and referring to them also works.

--- a/plutus-book/doc/03-UTxO.adoc
+++ b/plutus-book/doc/03-UTxO.adoc
@@ -10,7 +10,7 @@ or perhaps internet addresses in the case of digital currency. The Cardano platf
 like a number of other cryptocurrency platforms such as Bitcoin, uses instead
 an accounting approach known as UTxO-style. A full formal description of
 this type of accounting can be found as part of the Cardano ledger
-formal specification, see <<bibliography#bibliography>>.
+formal specification, see <<endmatter#deleg>>.
 
 UTxO-style accounting documents the flow of money not from account to account,
 but rather from transaction to transaction. Each transaction has inputs
