--- a/plutus-book/doc/endmatter.adoc
+++ b/plutus-book/doc/endmatter.adoc
@@ -1,5 +1,58 @@
+// This section exists to work around https://github.com/asciidoctor/asciidoctor/issues/3356
+// Don't number this section
+:sectnums!:
+[#endmatter]
+= Endmatter
+:sectnums:
+
+[glossary#glossary]
+== Glossary
+
+Contract Endpoints ::
+Off-chain functions used by a wallet to interact with a smart contract.
+
+Extended UTxO ::
+The ledger model on which the Plutus platform is based. Extends the traditional UTxO model
+with data scripts and transaction information
+
+Fungible Token ::
+A token that is interchangeable with other tokens.
+
+Mockchain ::
+A Cardano blockchain emulator which faithfully implements the Extended UTxO model.
+
+Mock wallet ::
+A wallet emulator which is used to interact with the mockchain
+
+Non-fungible Token ::
+A token that is not interchangeable with other tokens.
+
+Off-chain code ::
+Code written as part of a smart contract which executes off the chain, usually in a user's wallet.
+
+On-chain code ::
+Code written as part of a smart contract which executes on the chain during transaction validation.
+
+Plutus Core ::
+A small functional programming language designed to run as on-chain code.
+
+Plutus IR ::
+An intermediate language that compiles to Plutus Core, for use as a target language for compiler writers.
+
+Plutus Platform ::
+The combined software support for writing smart contracts, including:
+- libraries for writing off-chain code in Haskell.
+- libraries for writing on-chain code in Plutus Tx.
+- emulator support for testing smart contracts.
+
+Plutus Playground ::
+A browser based environment for writing and testing Plutus contracts.
+
+Plutus Tx ::
+A subset of Haskell which is compiled into Plutus Core.
+
 [bibliography#bibliography]
-= References
+== References
 
 - [[[devtools,1]]] Plutus Team. 2019. The Plutus language implementation and
 tools. https://github.com/input-output-hk/plutus.
