--- a/plutus-core-spec/plutus-core-specification.tex
+++ b/plutus-core-spec/plutus-core-specification.tex
@@ -1,6 +1,6 @@
 % Plutus Core Specification
 \title{Formal Specification of\\the Plutus Core Language (version 2.0) }
-\date{15th June 2019}
+\date{22nd July 2019}
 
 \documentclass[a4paper]{article}
 
@@ -881,8 +881,8 @@ that the machine was incorrectly implemented or that it was attempting
 to evaluate an invalid program which should have been detected during
 parsing or typechecking.
 
-For efficiency reasons the semantics of the machine defined in
-Figure~\ref{fig:ck-machine} differ in two respects from the semantics
+For efficiency reasons the behaviour of the machine defined in
+Figure~\ref{fig:ck-machine} differs in two respects from the semantics
 defined in Figure~\ref{fig:term-reduction}:
 \begin{itemize}
 \item The CK machine does not perform type instantiation since this
