Data scripts: now includes the hash
The `Sealed` argument should include the hash, now it does. Users can
cross-reference this against the `PendingTx` to
work out which output it comes from. Example in `StateMachine`.

Note that this is probably unnecessary if you only care that it is *a*
data script, but often you want to check that it's on the right output.

--- a/plutus-book/doc/multi/vesting.adoc
+++ b/plutus-book/doc/multi/vesting.adoc
@@ -80,7 +80,7 @@ dataScript = DataScript $ lifted ()
 redeemerScript1 :: RedeemerScript
 redeemerScript1 = RedeemerScript $
     -- The redeemer is passed the data script (unit), which it just ignores.
-    $$(Ledger.compileScript [|| \(_ :: Sealed ()) -> () ||])
+    $$(Ledger.compileScript [|| \(_ :: Sealed (HashedDataScript ())) -> () ||])
 
 redeemerScript0 :: RedeemerScript
 redeemerScript0 = RedeemerScript $ $$(Ledger.compileScript [|| () ||])
