--- a/plutus-book/doc/non-fungible/nonfungible1.adoc
+++ b/plutus-book/doc/non-fungible/nonfungible1.adoc
@@ -74,7 +74,7 @@ We create some helper functions next:
 ----
 mkNonFungibleRedeemer :: String -> RedeemerScript
 mkNonFungibleRedeemer name =
-    let s = $$(compileScript [|| \(t :: TokenName) (_ :: Sealed ()) -> t ||])
+    let s = $$(compileScript [|| \(t :: TokenName) (_ :: Sealed (HashedDataScript ())) -> t ||])
     in  RedeemerScript $ applyScript s $ lifted $ TokenName $ C.pack name
 
 mkNonFungibleValidator :: NonFungible -> ValidatorScript
