--- a/plutus-core-spec/plutus-core-specification.tex
+++ b/plutus-core-spec/plutus-core-specification.tex
@@ -934,25 +934,14 @@ at some time in the future.
   for integers.  These differ in their treatment of negative
   arguments.
 
-%%\footnote{The standard mathematical definition (the so-called
-%%\textit{division algorithm}, or \textit{Euclidean division}) is as
-%%follows: if $n,d \in \mathbb{Z}$ and $d \ne 0$ then there exist
-%%unique integers $q, r \in \mathbb{Z}$ such that $n=qb+r$ and
-%%$0 \le r < \lvert d \rvert$; $q$ is the \textit{quotient} and $r$
-%%is the \textit{remainder}.  Neither of our sets of operations
-%%implements this definition! For $d > 0$, \texttt{divideInteger}
-%%and \texttt{modInteger} give the correct results, but they can
-%%give negative remainders for $d<0$.  In any sensible computation
-%%we'd probably have $d>0$, but it's worth being careful.}:
-
   \begin{itemize}
   
   \item \texttt{divideInteger} and \texttt{modInteger} implement the
-    standard mathematical integer division operations (at least for
-    divisors greater than zero): \texttt{divideInteger}
-    rounds downwards and the sign of \texttt{modInteger} $n$ $d$ is
-    the same as the sign of $d$.  These correspond to Haskell's
-    \texttt{div} and \texttt{mod} operators.
+    standard mathematical integer division operations (at least when
+    the divisor is positive): \texttt{divideInteger} rounds
+    downwards and the sign of \texttt{modInteger} $n$ $d$ is the same
+    as the sign of $d$.  These correspond to Haskell's \texttt{div}
+    and \texttt{mod} operators.
 
   \item \texttt{quotientInteger} and \texttt{remainderInteger}
     represent the operations found in many computer languages and
@@ -961,11 +950,31 @@ at some time in the future.
     $n$.  These correspond to Haskell's \texttt{rem} and \texttt{quot}
     operators.  \end{itemize}
 
-  
-\item We use fixed Scott encodings for certain types and values, specifically for
-  the \textit{unit} and \textit{boolean} types.  Compilers targeting
-  Plutus Core must be aware of these encodings and use them
-  appropriately.
+% NOTE. The standard mathematical definition of integer
+% division/remainder (the so-called _division algorithm_, or
+% _Euclidean division_) is as follows: if n, d \in Z and d != 0
+% then there exist unique integers q, r \in Z such that n=qb+r and
+% 0 <= r < |d|; q is the _quotient_ and r is the _remainder_.
+% Neither of our sets of operations implements this definition!
+% For d>0, divideInteger and modInteger give the correct results,
+% but they can give negative remainders for d<0.  In any sensible
+% computation we'd probably have d>0, but it's worth being careful.
+
+% For comparison, here are the results for some sample inputs.
+% The last two columns give the results for Euclidean division.
+%
+%     n  d | div mod | quot rem |  q   r
+%   --------------------------------------
+%    41  5 |  8   1  |   8   1  |  8   1
+%   -41  5 | -9   4  |  -8  -1  | -9   4
+%    41 -5 | -9  -4  |  -8   1  | -8   1
+%   -41 -5 |  8  -1  |   8  -1  |  9   4 
+
+
+  \item We use fixed Scott encodings for certain types and values,
+    specifically for the \textit{unit} and \textit{boolean} types.
+    Compilers targeting Plutus Core must be aware of these encodings and
+    use them appropriately.
 \end{itemize}
 \subfile{figures/Builtins}
 
