--- a/plutus-core-spec/figures/TermReduction.tex
+++ b/plutus-core-spec/figures/TermReduction.tex
@@ -31,7 +31,7 @@
 
     \begin{prooftree}
         \AxiomC{}
-        \UnaryInfC{\(\step{\inst{\abs{\alpha}{K}{V}}{A}}{\{A/\alpha\}V}\)}
+        \UnaryInfC{\(\step{\inst{\abs{\alpha}{K}{V}}{A}}{[A/\alpha]V}\)}
     \end{prooftree}
 
     \begin{prooftree}
