Change some wording

--- a/plutus-core-spec/plutus-core-specification.tex
+++ b/plutus-core-spec/plutus-core-specification.tex
@@ -884,7 +884,7 @@ Figure~\ref{fig:ck-machine} differs in two respects from the semantics
 defined in Figure~\ref{fig:term-reduction}:
 \begin{itemize}
 \item The CK machine does not perform type instantiation since this
-  is irrelevant at run time.
+  is computationally irrelevant.
 \item When it encounters an \texttt{error} term the machine terminates
   immediately.  In Figure~\ref{fig:term-reduction} the \texttt{error}
   term propagates to the top of the stack of reduction frames,
