--- a/plutus-book/doc/plutus.adoc
+++ b/plutus-book/doc/plutus.adoc
@@ -72,4 +72,6 @@ include::token/token.adoc[]
 
 include::non-fungible/non-fungible.adoc[]
 
+include::auction/auction.adoc[]
+
 include::endmatter.adoc[]
