Oops: forgot one

--- a/plutus-book/doc/multi/multi.adoc
+++ b/plutus-book/doc/multi/multi.adoc
@@ -7,7 +7,7 @@ example where this is not the case and where the funds can be collected in
 potentially many steps.
 
 Our example will be a _vesting scheme_:
-In such a scheme, parts (so called _tranches_) of the locked funds become available
+in such a scheme, parts (so called _tranches_) of the locked funds become available
 at certain times. To simplify matters, we will look at vesting schemes with
 _two_ such tranches.
 
