Fix a semantic merge conflict in a copy (?!) of the Marlowe interpreter
I'm not sure this should be here at all, but anyway it had a conflict
after merging.

--- a/plutus-book/doc/marlowe/Language/Marlowe/common.adoc
+++ b/plutus-book/doc/marlowe/Language/Marlowe/common.adoc
@@ -38,6 +38,7 @@ import           Ledger.Ada                 (Ada)
 import qualified Ledger.Ada                 as Ada
 import           Ledger.Interval            (Interval (..))
 import           Ledger.Validation
+import           Ledger.Scripts             (DataScriptHash (..), RedeemerHash (..))
 import           LedgerBytes                (LedgerBytes (..))
 import           Text.PrettyPrint.Leijen    (text)
 
